<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActualizarJugadorActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_nombreJugador"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:hint="@string/text_nombreJugador" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.434"/>
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_nombreCamiseta"
            android:hint="@string/text_nombreCamiseta"
            tools:layout_editor_absoluteX="76dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/text_numCamiseta"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            tools:layout_editor_absoluteX="78dp"
            android:id="@+id/text_poder"
            android:hint="@string/text_poder"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/text_nombreCamiseta"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            tools:layout_editor_absoluteX="76dp"
            android:id="@+id/text_numCamiseta"
            android:hint="@string/text_numCamiseta"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/text_nombreJugador"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            tools:layout_editor_absoluteX="78dp" android:id="@+id/text_fechaIngreso"
            android:hint="@string/text_fechaIngreso"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/text_poder"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            tools:layout_editor_absoluteX="78dp" android:id="@+id/text_goles"
            android:hint="@string/text_goles"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/text_fechaIngreso"/>
    <EditText
            android:layout_width="138dp"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/text_latitud"
            android:hint="@string/text_latitud"
            tools:layout_editor_absoluteX="76dp" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/text_goles"/>
    <EditText
            android:layout_width="126dp"
            android:layout_height="46dp"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            tools:layout_editor_absoluteX="225dp"
            android:id="@+id/text_longitud"
            android:hint="@string/text_longitud"
            app:layout_constraintBottom_toBottomOf="@+id/text_latitud"
            app:layout_constraintTop_toTopOf="@+id/text_latitud"/>
    <Button
            android:text="@string/btn_actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_actualizar" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_latitud" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/text_longitud"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_latitud"/>

</androidx.constraintlayout.widget.ConstraintLayout>