<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearJugadorActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_nombreJugador" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/text_nombreJugador"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_nombreCamiseta"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/text_numCamiseta"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/text_numCamiseta"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/text_numCamiseta"
            app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/text_nombreCamiseta"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_poder" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_nombreCamiseta" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/text_nombreCamiseta" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/text_nombreCamiseta" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/text_poder"/>
    <Button
            android:text="@string/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_guardar"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_longitud" app:layout_constraintStart_toStartOf="@+id/text_longitud"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/text_latitud" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/text_numCamiseta" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_nombreJugador"
            app:layout_constraintEnd_toEndOf="@+id/text_nombreJugador"
            app:layout_constraintStart_toStartOf="@+id/text_nombreJugador" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/text_numCamiseta"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/text_fechaIngreso" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_poder"
            app:layout_constraintEnd_toEndOf="@+id/text_poder"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/text_poder"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:hint="@string/text_fechaIngreso"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/text_goles" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_fechaIngreso"
            app:layout_constraintEnd_toEndOf="@+id/text_fechaIngreso"
            app:layout_constraintStart_toStartOf="@+id/text_fechaIngreso" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/text_goles"/>
    <EditText
            android:layout_width="147dp"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_longitud"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_goles" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/text_longitud"/>
    <EditText
            android:layout_width="145dp"
            android:layout_height="51dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_latitud"
            app:layout_constraintStart_toEndOf="@+id/text_longitud" android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            app:layout_constraintTop_toTopOf="@+id/text_longitud"
            app:layout_constraintBottom_toBottomOf="@+id/text_longitud"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:hint="@string/text_latitud"/>
</androidx.constraintlayout.widget.ConstraintLayout>